# ushare

./: .hgignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  THANKS  TODO  configure  configure.ac
data/: Makefile
debian/: Makefile.am  changelog  control  copyright  rules  ushare.config  ushare.postinst  ushare.templates  watch
debian/po/: Makefile.am  POTFILES.in  fr.po  templates.pot
fedora/: ushare.init  ushare.spec
po/: Makefile  Makevars  POTFILES.in  de.po  fr.po  ushare.pot
scripts/: Makefile  Makefile.am  ushare  ushare.conf
src/: .arch-inventory  Makefile  Makefile.am  Makefile.in  buffer.c  buffer.h  cds.c  cds.h  cfgparser.c  cfgparser.h  cms.c  cms.h  content.c  content.h  ctrl_telnet.c  ctrl_telnet.h  ctrltelnet.c  dlna.h  gettext.h  http.c  http.h  intutil.c  intutil.h  metadata.c  metadata.h  mime.c  mime.h  msr.c  msr.h  osdep.c  parse_config.c  parse_config.h  presentation.c  presentation.h  redblack.c  services.c  services.h  strbuf.c  strbuf.h  trace.c  (+8 more)
web/: index.html
