bin_PROGRAMS=ushare
ushare_SOURCES= \
	cds.h cds.c \
	cms.h cms.c \
	http.h http.c \
	intutil.h intutil.c \
	metadata.h metadata.c \
	mime.h mime.c \
	minmax.h \
	services.h services.c \
	strbuf.h strbuf.c \
	util_iconv.h util_iconv.c \
	gettext.h \
	content.h content.c \
	ushare.h ushare.c

man_MANS = ushare.1
EXTRA_DIST = $(man_MANS)
