bin_PROGRAMS=ushare
ushare_SOURCES= \
	cds.h cds.c \
	cms.h cms.c \
	http.h http.c \
	presentation.h presentation.c \
	metadata.h metadata.c \
	mime.h mime.c \
	minmax.h \
	services.h services.c \
	buffer.h buffer.c \
	util_iconv.h util_iconv.c \
	gettext.h \
	content.h content.c \
	cfgparser.h cfgparser.c \
	trace.h trace.c \
	ushare.h ushare.c

dist_man_MANS = ushare.1
